refactor code page script

--- a/code/index.html
+++ b/code/index.html
@@ -2,6 +2,9 @@
 layout: sub-page
 title: "HBC Tech: Code"
 ---
+<!-- these scripts are only for the code.gilt.com page -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="{{ site.url }}{{ site.baseurl }}/assets/js/get-gh-repos.js"></script>
 <section class="code-page">
 	<header class="code-page__header code-page__header--reveal">
 		<h1 class="code-page__title">Code</h1>
