updates to about and careers pages

--- a/work-here/index.html
+++ b/work-here/index.html
@@ -1,69 +1,70 @@
 ---
 layout: sub-page
 title: "HBC Tech: Work Here"
-application-link: https://docs.google.com/forms/d/e/1FAIpQLScFD71CnOUuI-PBGeEUUYHjjTdgeViCbk_9S71E7adh4c43wA/viewform?usp=sf_link
+application-link: #
 ---
 <section class="careers-page">
 	<header class="careers-page__header careers-page__header--reveal">
 		<h1 class="careers-page__title">Careers</h1>
 		<img class="careers-page__hero-image" title="Careers" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.careers.hero }}" />
 	</header>
+	<section class="careers-page__intro careers-page__intro--reveal">
+		<p class="careers-page__intro__text">
+		Our employees work in small, cross-functional teams  with a high level of autonomy and ownership. We offer a flexible work environment, great work-life balance, a growing number of perks and career development opportunities.
+		</p>
+	</section>
 	<section class="careers-page__jobs careers-page__jobs--reveal">
-		<h2 class="careers-page__jobs__title">Featured Positions</h2>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Senior Systems  Engineer</h3>
-			<p class="location">New York City</p>
-			<a class="view-listing" href="https://stackoverflow.com/jobs/112172/senior-systems-engineer-hbc" target="_blank">View Listing</a>
+			<p class="location"><span class="location__label">Location: </span>NYC</p>
+			<h3 class="job-title job-title--featured"><a class="job-title__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Software Engineer</a></h3>
+			<p class="description"><a class="description__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">HBC software engineers are responsible for creating clear, flexible code to develop high-quality software for all of our sites. Innovation and risk taking are encouraged, sound like you?</a></p>
+			<a class="view-listing" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Find Out More Here</a>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Senior Software Engineer</h3>
-			<p class="location">New York City</p>
-			<a class="view-listing" href="https://stackoverflow.com/jobs/132568/senior-software-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
+			<p class="location"><span class="location__label">Location: </span>NYC</p>
+			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/132568/senior-software-engineer-hbc-digital-saks-fifth" target="_blank">Senior Software Engineer</a></h3>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Software Engineer</h3>
-			<p class="location">New York City</p>
-			<a class="view-listing" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
+			<p class="location"><span class="location__label">Location: </span>NYC</p>
+			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/112172/senior-systems-engineer-hbc" target="_blank">Senior Systems  Engineer</a></h3>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Senior Front End Engineer</h3>
-			<p class="location">New York City</p>
-			<a class="view-listing" href="https://stackoverflow.com/jobs/137315/senior-front-end-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
+			<p class="location"><span class="location__label">Location: </span>NYC</p>
+			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/137315/senior-front-end-engineer-hbc-digital-saks-fifth" target="_blank">Senior Front End Engineer</a></h3>
 		</section>
 		<section class="careers-page__jobs__position">
-			<h3 class="job-title">Front End Engineer</h3>
-			<p class="location">New York City</p>
-			<a class="view-listing" href="https://stackoverflow.com/jobs/149623/front-end-engineer-hbc-digital-saks-fifth" target="_blank">View Listing</a>
+			<p class="location"><span class="location__label">Location: </span>NYC</p>
+			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/149623/front-end-engineer-hbc-digital-saks-fifth" target="_blank">Front End Engineer</a></h3>
 		</section>
 		<section class="careers-page__jobs__view-all">
-			<a class="view-all-link" href="http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=Digital&state=New+York&city=NEW+YORK&type=&keywords=#d" target="_blank">View All</a>
+			<a class="view-all-link" href="http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=Digital&state=New+York&city=NEW+YORK&type=&keywords=#d" target="_blank">View All Listings</a>
 			<p class="view-all-copy">Can’t find a position? We're always looking for good talent! <a class="application-link" href="{{page.application-link}}" target="_blank">Get In Touch!</a></p>
 		</section>
 	</section>
 	<section class="careers-page__perks">
 		<h2 class="careers-page__perks__title">Perks & Benefits</h2>
 		<section class="perk">
-			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/health.svg"/>
+			<h3 class="perk__label">Comprehensive Health, Dental & Vision Care</h3>
+		</section>
+		<section class="perk">
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/domestic-partner.svg"/>
 			<h3 class="perk__label">Domestic Partner Benefits</h3>
 		</section>
 		<section class="perk">
-			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/vacation-unlimited.svg"/>
 			<h3 class="perk__label">Unlimited Paid Vacation</h3>
 		</section>
 		<section class="perk">
-			<img class="perk__icon"src="http://placehold.it/100x100"/>
-			<h3 class="perk__label">Flexible Office Hours</h3>
-		</section>
-		<section class="perk">
-			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/401k.svg"/>
 			<h3 class="perk__label">Casual Dress Code</h3>
 		</section>
 		<section class="perk">
-			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/401k.svg"/>
 			<h3 class="perk__label">Discounts At Our Stores</h3>
 		</section>
 		<section class="perk">
-			<img class="perk__icon"src="http://placehold.it/100x100"/>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/401k.svg"/>
 			<h3 class="perk__label">401k Matching</h3>
 		</section>
 	</section>
