updates to search, global header, and all page header animations

--- a/code/index.html
+++ b/code/index.html
@@ -9,11 +9,11 @@ title: "HBC Tech: Code"
 	<header class="code-page__header code-page__header--reveal">
 		<h1 class="code-page__title">Code</h1>
 	</header>
-	<section class="code-page__projects code-page__projects--reveal">
-		<a class="gilt-api" href="https://dev.gilt.com/" target="_blank" title="Gilt Public Api">
+	<section class="code-page__projects">
+		<a class="gilt-api gilt-api--reveal" href="https://dev.gilt.com/" target="_blank" title="Gilt Public Api">
 			<img class="gilt-api__logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/gilt-api.png" alt="Gilt Public Api">
 		</a>
-		<a class="styleguide" href="https://styleguide.hbc.com/" target="_blank" title="HBC Styleguide">
+		<a class="styleguide styleguide--reveal" href="https://styleguide.hbc.com/" target="_blank" title="HBC Styleguide">
 			<img class="styleguide__logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-styleguide.png" alt="HBC Styleguide">
 		</a>
 	</section>
