--- a/work-here/index.html
+++ b/work-here/index.html
@@ -14,10 +14,10 @@ application-link: #
 		</p>
 	</section>
 	<section class="careers-page__jobs careers-page__jobs--reveal">
-		<section class="careers-page__jobs__position">
+		<section class="careers-page__jobs__position careers-page__jobs__position--featured">
 			<p class="location"><span class="location__label">Location: </span>NYC</p>
-			<h3 class="job-title job-title--featured"><a class="job-title__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Software Engineer</a></h3>
-			<p class="description"><a class="description__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">HBC software engineers are responsible for creating clear, flexible code to develop high-quality software for all of our sites. Innovation and risk taking are encouraged, sound like you?</a></p>
+			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Software Engineer</a></h3>
+			<a class="description__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">HBC software engineers are responsible for creating clear, flexible code to develop high-quality software for all of our sites. Innovation and risk taking are encouraged, sound like you?</a>
 			<a class="view-listing" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Find Out More Here</a>
 		</section>
 		<section class="careers-page__jobs__position">
