updated perk icons

--- a/work-here/index.html
+++ b/work-here/index.html
@@ -56,11 +56,11 @@ application-link: #
 			<h3 class="perk__label">Unlimited Paid Vacation</h3>
 		</section>
 		<section class="perk">
-			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/401k.svg"/>
-			<h3 class="perk__label">Casual Dress Code</h3>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/newtechnology.svg"/>
+			<h3 class="perk__label">20% Time to Explore New Technologies</h3>
 		</section>
 		<section class="perk">
-			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/401k.svg"/>
+			<img class="perk__icon" src="{{ site.url }}{{ site.baseurl }}/assets/images/associate-discount.svg"/>
 			<h3 class="perk__label">Discounts At Our Stores</h3>
 		</section>
 		<section class="perk">
