--- a/index.html
+++ b/index.html
@@ -24,22 +24,24 @@ layout:
 
     <body aria-label="Content">
         {% include header-subpage.html %}
-        <section class="content page">
-            <!-- sub page template -->
-            <header class="page__header">
-                <h1 class="page__title">Recent Articles</h1>
-            </header>
-            <!-- this is the rest of the posts listed with no feature images-->
-            <section class="article-listing__remaining article-listing__remaining--sub-page">
-                <section class="asides">
-                   {% include featured-topics.html showMoreLink=true%}
+        <section class="content">
+            <section class="page">
+                <!-- sub page template -->
+                <header class="page__header">
+                    <h1 class="page__title">Recent Articles</h1>
+                </header>
+                <!-- this is the rest of the posts listed with no feature images-->
+                <section class="article-listing__remaining article-listing__remaining--sub-page">
+                    <section class="asides">
+                       {% include featured-topics.html showMoreLink=true%}
+                    </section>
+                    <section class="articles">
+                        {% for post in paginator.posts %}
+                        {% include article-snippet.html excerpt=true featureImage=false %}
+                        {% endfor %}
+                    </section>
+                    {% include pagination.html %}
                 </section>
-                <section class="articles">
-                    {% for post in paginator.posts %}
-                    {% include article-snippet.html excerpt=true featureImage=false %}
-                    {% endfor %}
-                </section>
-                {% include pagination.html %}
             </section>
         </section>
         {% include footer.html %}
