adding image for code page header

--- a/code/index.html
+++ b/code/index.html
@@ -8,6 +8,7 @@ title: "HBC Tech: Code"
 <section class="code-page">
 	<header class="code-page__header code-page__header--reveal">
 		<h1 class="code-page__title">Code</h1>
+		<img class="code-page__hero-image" title="Careers" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.code-page.hero }}" />
 	</header>
 	<section class="code-page__projects">
 		<a class="gilt-api gilt-api--reveal" href="https://dev.gilt.com/" target="_blank" title="Gilt Public Api">
