--- a/about/index.html
+++ b/about/index.html
@@ -27,8 +27,17 @@ title: "HBC Tech: About Us"
 		<section class="location location--new-york">
 			<h3 class="location__label">New York City</h3>
 		</section>
+		<section class="location location--toronto">
+			<h3 class="location__label">Toronto</h3>
+		</section>
+		<section class="location location--jackson">
+			<h3 class="location__label">Jackson</h3>
+		</section>
 		<section class="location location--dublin">
 			<h3 class="location__label">Dublin</h3>
+		</section>
+		<section class="location location--bangalore">
+			<h3 class="location__label">Bangalore</h3>
 		</section>
 	</section>
 </section>
