adding support for responsive video embeds

--- a/_posts/tumblr/2011-02-08-tips-for-optimizing-iphone-ipad-applications.html
+++ b/_posts/tumblr/2011-02-08-tips-for-optimizing-iphone-ipad-applications.html
@@ -20,7 +20,7 @@ tumblr_url: http://tech.gilt.com/post/3187131303/tips-for-optimizing-iphone-ipad
 ---
 <p>We’ve made a number of optimizations to our iPhone/iPad codebase over the past couple of months, the effects of which can be seen in the attached video:</p>
 
-<p><iframe frameborder="0" height="267" src="http://player.vimeo.com/video/19722439?portrait=0" width="475"></iframe></p>
+<p><iframe frameborder="0" height="267" src="https://player.vimeo.com/video/19722439?portrait=0" width="475"></iframe></p>
 
 <p><em>(Because our application is so dependent on the network, the new code won’t appear to outperform the old code 100% of the time. This is due to the vagaries of the connection between the devices and the server.)</em></p>
 
