--- a/_posts/tumblr/2011-05-12-gilt-tech-talks-java-scala-with-the-guardians.html
+++ b/_posts/tumblr/2011-05-12-gilt-tech-talks-java-scala-with-the-guardians.html
@@ -14,7 +14,7 @@ tags:
 tumblr_url: http://tech.gilt.com/post/5429489376/gilt-tech-talks-java-scala-with-the-guardians
 ---
 <p>Graham Tackley of the Guardian.co.uk was kind enough to deliver the latest in our series of technical talks. Graham discusses the Guardian’s transition from Java to Scala, highlighting both the advantages and difficulties of the migration.</p>
-<p><iframe frameborder="0" height="270" src="http://player.vimeo.com/video/23608005" width="480"></iframe></p>
+<p><div class="videoWrapper"><iframe frameborder="0" height="270" src="https://player.vimeo.com/video/23608005" width="480"></iframe></div></p>
 <p>You can see the slides from the talk below.</p>
 <p><object height="355" width="480"><param name="movie" value="http://static.slidesharecdn.com/swf/ssplayer2.swf?doc=javatoscalagilt-110512154719-phpapp01&amp;stripped_title=java-to-scala-7944685&amp;userName=GiltTech"><param name="allowFullScreen" value="true"><param name="allowScriptAccess" value="always"></object></p>
 <script src="http://b.scorecardresearch.com/beacon.js?c1=7&amp;c2=7400849&amp;c3=1&amp;c4=&amp;c5=&amp;c6=" type="text/javascript"></script><script src="http://b.scorecardresearch.com/beacon.js?c1=7&amp;c2=7400849&amp;c3=1&amp;c4=&amp;c5=&amp;c6=" type="text/javascript"></script>
