--- a/_posts/tumblr/2012-02-10-nosql-in-the-real-world-the-video-pics-and.html
+++ b/_posts/tumblr/2012-02-10-nosql-in-the-real-world-the-video-pics-and.html
@@ -13,7 +13,7 @@ tumblr_url: http://tech.gilt.com/post/17379979309/nosql-in-the-real-world-the-vi
 <li>Luke Gotszling  - MongoDB</li>
 </ul><p>Huge thanks to <a href="http://www.linkedin.com/in/rockmanha" target="_blank">Rockman</a> and <a href="http://www.linkedin.com/pub/maureen-wu/24/758/306" target="_blank">Maureen</a> for organizing the event, and to AOL ventures for sponsoring and hosting.</p>
 <p>Enjoy out the video &hellip;</p>
-<p><iframe frameborder="0" height="270" src="http://player.vimeo.com/video/36496024" width="480"></iframe></p>
+<p><div class="videoWrapper"><iframe frameborder="0" height="270" src="https://player.vimeo.com/video/36496024" width="480"></iframe></div></p>
 <p>The Pictures &hellip;</p>
 <p>
 <object height="360" width="480">
