--- a/_posts/tumblr/2013-08-02-an-hour-in-the-life-of-the-gilt-mobile-team-in.html
+++ b/_posts/tumblr/2013-08-02-an-hour-in-the-life-of-the-gilt-mobile-team-in.html
@@ -9,6 +9,6 @@ tags:
 - engineering
 tumblr_url: http://tech.gilt.com/post/57209292778/an-hour-in-the-life-of-the-gilt-mobile-team-in
 ---
-<p><iframe frameborder="0" height="375" src="http://player.vimeo.com/video/71607447" width="500"></iframe></p>
+<p><div class="videoWrapper"><iframe frameborder="0" src="https://player.vimeo.com/video/71607447"></iframe></div></p>
 <p><span class="st">Principal Software Engineer Adam Kaplan created this time-lapse video of the Gilt Mobile Team at work.<br/></span></p>
 <p><span class="st"> </span></p>
