organized images folder

--- a/about/index.html
+++ b/about/index.html
@@ -11,16 +11,16 @@ title: "HBC Tech: About Us"
 		<p class="about-page__intro__text">We offer a flexible work environment, great work-life balance and a growing number of perks and career development opportunities.</p>
 	</section>
 	<section class="about-page__photo-grid about-page__photo-grid--reveal">
-		<img class="left" src="{{ site.url }}{{ site.baseurl }}/assets/images/photo-grid-1.jpg"/>
-		<img class="right" src="{{ site.url }}{{ site.baseurl }}/assets/images/photo-grid-4.jpg"/>
+		<img class="left" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/photo-grid-1.jpg"/>
+		<img class="right" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/photo-grid-4.jpg"/>
 	</section>
 	<section class="about-page__our-banners">
 		<h2 class="about-page__our-banners__title">Our Banners</h2>
-		<a class="banner-logo--link" href="http://thebay.com" target="_blank" title="Hudson's Bay"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/hb-logo.svg" alt="Hudson's Bay"/></a>
-		<a class="banner-logo--link" href="http://saks.com" target="_blank" title="Saks Fifth Avenue"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/saks-logo.svg" alt="Saks Fifth Avenue"/></a>
-		<a class="banner-logo--link" href="http://off5th.com" target="_blank" title="Saks Fifth Avenue Off5th"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/off5th-logo.svg" alt="Saks Fifth Avenue Off5th"/></a>
-		<a class="banner-logo--link" href="http://gilt.com" target="_blank" title="Gilt"><img class="banner-logo banner-logo--gilt" src="{{ site.url }}{{ site.baseurl }}/assets/images/gilt-logo.svg" alt="Gilt"/></a>
-		<a class="banner-logo--link" href="http://lordandtaylor.com" target="_blank" title="Lord & Taylor"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/lt-logo.svg" alt="Lord & Taylor"/></a>
+		<a class="banner-logo--link" href="http://thebay.com" target="_blank" title="Hudson's Bay"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/hb-logo.svg" alt="Hudson's Bay"/></a>
+		<a class="banner-logo--link" href="http://saks.com" target="_blank" title="Saks Fifth Avenue"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/saks-logo.svg" alt="Saks Fifth Avenue"/></a>
+		<a class="banner-logo--link" href="http://off5th.com" target="_blank" title="Saks Fifth Avenue Off5th"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/off5th-logo.svg" alt="Saks Fifth Avenue Off5th"/></a>
+		<a class="banner-logo--link" href="http://gilt.com" target="_blank" title="Gilt"><img class="banner-logo banner-logo--gilt" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/gilt-logo.svg" alt="Gilt"/></a>
+		<a class="banner-logo--link" href="http://lordandtaylor.com" target="_blank" title="Lord & Taylor"><img class="banner-logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/lt-logo.svg" alt="Lord & Taylor"/></a>
 	</section>
 	<section class="about-page__locations">
 		<h2 class="about-page__locations__title">Locations</h2>
