--- a/code/index.html
+++ b/code/index.html
@@ -12,10 +12,10 @@ title: "HBC Tech: Code"
 	</header>
 	<section class="code-page__projects">
 		<a class="gilt-api gilt-api--reveal" href="https://dev.gilt.com/" target="_blank" title="Gilt Public Api">
-			<img class="gilt-api__logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/gilt-api.png" alt="Gilt Public Api">
+			<img class="gilt-api__logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.code-page.api }}" alt="Gilt Public Api">
 		</a>
 		<a class="styleguide styleguide--reveal" href="https://styleguide.hbc.com/" target="_blank" title="HBC Styleguide">
-			<img class="styleguide__logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/hbc-styleguide.png" alt="HBC Styleguide">
+			<img class="styleguide__logo" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.code-page.styleguide }}" alt="HBC Styleguide">
 		</a>
 	</section>
 	<section id="all-repos" class="code-page__repos">
