update about page to include all locations

--- a/about/index.html
+++ b/about/index.html
@@ -24,20 +24,59 @@ title: "HBC Tech: About Us"
 	</section>
 	<section class="about-page__locations">
 		<h2 class="about-page__locations__title">Locations</h2>
-		<section class="location location--new-york">
-			<h3 class="location__label">New York City</h3>
+		<section class="location">
+			<svg width="17px" height="26px" viewBox="0 0 17 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-7" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <path d="M8.5,26 C2.83333333,19.469276 0,13.6775722 0,8.6248887 C1.90709786e-16,3.8614942 3.80557963,0 8.5,0 C13.1944204,0 16.9912953,3.41321521 17,8.6248887 C17,13.1482544 14.1666667,18.9399581 8.5,26 Z M8.5,13 C10.9852814,13 13,10.9852814 13,8.5 C13,6.01471863 10.9852814,4 8.5,4 C6.01471863,4 4,6.01471863 4,8.5 C4,10.9852814 6.01471863,13 8.5,13 Z" fill="#E94F3D"></path>
+			    </g>
+			</svg>
+			<h3 class="location__label">Toronto, ON</h3>
+			<h4 class="location__label--2">Canada</h4>
 		</section>
-		<section class="location location--toronto">
-			<h3 class="location__label">Toronto</h3>
+		<section class="location">
+			<svg width="17px" height="26px" viewBox="0 0 17 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-7" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <path d="M8.5,26 C2.83333333,19.469276 0,13.6775722 0,8.6248887 C1.90709786e-16,3.8614942 3.80557963,0 8.5,0 C13.1944204,0 16.9912953,3.41321521 17,8.6248887 C17,13.1482544 14.1666667,18.9399581 8.5,26 Z M8.5,13 C10.9852814,13 13,10.9852814 13,8.5 C13,6.01471863 10.9852814,4 8.5,4 C6.01471863,4 4,6.01471863 4,8.5 C4,10.9852814 6.01471863,13 8.5,13 Z" fill="#E94F3D"></path>
+			    </g>
+			</svg>
+			<h3 class="location__label">Brampton, ON</h3>
+			<h4 class="location__label--2">Canada</h4>
 		</section>
-		<section class="location location--jackson">
-			<h3 class="location__label">Jackson</h3>
+		<section class="location">
+			<svg width="17px" height="26px" viewBox="0 0 17 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-7" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <path d="M8.5,26 C2.83333333,19.469276 0,13.6775722 0,8.6248887 C1.90709786e-16,3.8614942 3.80557963,0 8.5,0 C13.1944204,0 16.9912953,3.41321521 17,8.6248887 C17,13.1482544 14.1666667,18.9399581 8.5,26 Z M8.5,13 C10.9852814,13 13,10.9852814 13,8.5 C13,6.01471863 10.9852814,4 8.5,4 C6.01471863,4 4,6.01471863 4,8.5 C4,10.9852814 6.01471863,13 8.5,13 Z" fill="#E94F3D"></path>
+			    </g>
+			</svg>
+			<h3 class="location__label">New York, NY</h3>
+			<h4 class="location__label--2">USA</h4>
 		</section>
-		<section class="location location--dublin">
+		<section class="location">
+			<svg width="17px" height="26px" viewBox="0 0 17 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-7" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <path d="M8.5,26 C2.83333333,19.469276 0,13.6775722 0,8.6248887 C1.90709786e-16,3.8614942 3.80557963,0 8.5,0 C13.1944204,0 16.9912953,3.41321521 17,8.6248887 C17,13.1482544 14.1666667,18.9399581 8.5,26 Z M8.5,13 C10.9852814,13 13,10.9852814 13,8.5 C13,6.01471863 10.9852814,4 8.5,4 C6.01471863,4 4,6.01471863 4,8.5 C4,10.9852814 6.01471863,13 8.5,13 Z" fill="#E94F3D"></path>
+			    </g>
+			</svg>
+			<h3 class="location__label">Jackson, MS</h3>
+			<h4 class="location__label--2">USA</h4>
+		</section>
+		<section class="location">
+			<svg width="17px" height="26px" viewBox="0 0 17 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-7" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <path d="M8.5,26 C2.83333333,19.469276 0,13.6775722 0,8.6248887 C1.90709786e-16,3.8614942 3.80557963,0 8.5,0 C13.1944204,0 16.9912953,3.41321521 17,8.6248887 C17,13.1482544 14.1666667,18.9399581 8.5,26 Z M8.5,13 C10.9852814,13 13,10.9852814 13,8.5 C13,6.01471863 10.9852814,4 8.5,4 C6.01471863,4 4,6.01471863 4,8.5 C4,10.9852814 6.01471863,13 8.5,13 Z" fill="#E94F3D"></path>
+			    </g>
+			</svg>
 			<h3 class="location__label">Dublin</h3>
+			<h4 class="location__label--2">Ireland</h4>
 		</section>
-		<section class="location location--bangalore">
+		<section class="location">
+			<svg width="17px" height="26px" viewBox="0 0 17 26" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			    <g id="Page-7" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+			        <path d="M8.5,26 C2.83333333,19.469276 0,13.6775722 0,8.6248887 C1.90709786e-16,3.8614942 3.80557963,0 8.5,0 C13.1944204,0 16.9912953,3.41321521 17,8.6248887 C17,13.1482544 14.1666667,18.9399581 8.5,26 Z M8.5,13 C10.9852814,13 13,10.9852814 13,8.5 C13,6.01471863 10.9852814,4 8.5,4 C6.01471863,4 4,6.01471863 4,8.5 C4,10.9852814 6.01471863,13 8.5,13 Z" fill="#E94F3D"></path>
+			    </g>
+			</svg>
 			<h3 class="location__label">Bangalore</h3>
+			<h4 class="location__label--2">India</h4>
 		</section>
 	</section>
 </section>
