updating jobs listing link

--- a/work-here/index.html
+++ b/work-here/index.html
@@ -2,6 +2,7 @@
 layout: sub-page
 title: "HBC Tech: Work Here"
 application-link: https://goo.gl/forms/jt6EyNcsTNYlyhj72
+jobs-listing-link: http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=HBC+Tech&state=&type=&keywords=engineer#d
 ---
 <section class="careers-page">
 	<header class="careers-page__header careers-page__header--reveal">
@@ -37,7 +38,7 @@ application-link: https://goo.gl/forms/jt6EyNcsTNYlyhj72
 			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/149623/front-end-engineer-hbc-digital-saks-fifth" target="_blank">Front End Engineer</a></h3>
 		</section>
 		<section class="careers-page__jobs__view-all">
-			<a class="view-all-link" href="http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=Digital&state=New+York&city=NEW+YORK&type=&keywords=#d" target="_blank">View All Listings</a>
+			<a class="view-all-link" href="{{page.jobs-listing-link}}" target="_blank">View All Listings</a>
 			<p class="view-all-copy">Can’t find a position? We're always looking for good talent! <a class="application-link" href="{{page.application-link}}" target="_blank">Get In Touch!</a></p>
 		</section>
 	</section>
