--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@ title: "HBC Tech: About Us"
 		<img class="about-page__hero-image" title="about us" src="{{ site.url }}{{ site.baseurl }}/assets/images/{{ site.data.images.about.hero }}" />
 	</header>
 	<section class="about-page__intro about-page__intro--reveal">
-		<p class="about-page__intro__text">We offer a flexible work environment, great work-life balance and a growing number of perks and career development opportunities.</p>
+		<p class="about-page__intro__text">HBC Tech is focused on delivering technological innovation for the online and in-store luxury department store, off-price, and specialty businesses for Hudson’s Bay Company. Our goal is to provide an enriching, all-channel and fully-responsive customer experience.</p>
 	</section>
 	<section class="about-page__photo-grid about-page__photo-grid--reveal">
 		<img class="left" src="{{ site.url }}{{ site.baseurl }}/assets/images/blog/about/photo-grid-1.jpg"/>
