update jobs page

--- a/work-here/index.html
+++ b/work-here/index.html
@@ -2,7 +2,8 @@
 layout: sub-page
 title: "HBC Tech: Work Here"
 application-link: https://goo.gl/forms/jt6EyNcsTNYlyhj72
-jobs-listing-link: http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=HBC+Tech&state=&type=&keywords=engineer#d
+dublin-jobs-listing-link: http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=Technology&state=&city=Dublin&type=&keywords=#d
+nyc-jobs-listing-link: http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?action=search&banner=&area=Technology&state=&city=NEW+YORK&type=&keywords=#d
 ---
 <section class="careers-page">
 	<header class="careers-page__header careers-page__header--reveal">
@@ -15,32 +16,9 @@ jobs-listing-link: http://www.hbc.monstermediaworks.ca/en/hbc/search-and-apply?a
 		</p>
 	</section>
 	<section class="careers-page__jobs careers-page__jobs--reveal">
-		<section class="careers-page__jobs__position careers-page__jobs__position--featured">
-			<p class="location"><span class="location__label">Location: </span>NYC</p>
-			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Software Engineer</a></h3>
-			<a class="description__link" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">HBC software engineers are responsible for creating clear, flexible code to develop high-quality software for all of our sites. Innovation and risk taking are encouraged, sound like you?</a>
-			<a class="view-listing" href="https://stackoverflow.com/jobs/149622/software-engineer-hbc-digital-saks-fifth" target="_blank">Find Out More Here</a>
-		</section>
-		<section class="careers-page__jobs__position">
-			<p class="location"><span class="location__label">Location: </span>NYC</p>
-			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/132568/senior-software-engineer-hbc-digital-saks-fifth" target="_blank">Senior Software Engineer</a></h3>
-		</section>
-		<section class="careers-page__jobs__position">
-			<p class="location"><span class="location__label">Location: </span>NYC</p>
-			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/112172/senior-systems-engineer-hbc" target="_blank">Senior Systems  Engineer</a></h3>
-		</section>
-		<section class="careers-page__jobs__position">
-			<p class="location"><span class="location__label">Location: </span>NYC</p>
-			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/137315/senior-front-end-engineer-hbc-digital-saks-fifth" target="_blank">Senior Front End Engineer</a></h3>
-		</section>
-		<section class="careers-page__jobs__position">
-			<p class="location"><span class="location__label">Location: </span>NYC</p>
-			<h3 class="job-title"><a class="job-title__link" href="https://stackoverflow.com/jobs/149623/front-end-engineer-hbc-digital-saks-fifth" target="_blank">Front End Engineer</a></h3>
-		</section>
-		<section class="careers-page__jobs__view-all">
-			<a class="view-all-link" href="{{page.jobs-listing-link}}" target="_blank">View All Listings</a>
-			<p class="view-all-copy">Can’t find a position? We're always looking for good talent! <a class="application-link" href="{{page.application-link}}" target="_blank">Get In Touch!</a></p>
-		</section>
+		<a class="view-all-link" href="{{page.nyc-jobs-listing-link}}" target="_blank">NYC Job Listings</a>
+		<a class="view-all-link" href="{{page.dublin-jobs-listing-link}}" target="_blank">Dublin Job Listings</a>
+		<p class="view-all-copy">Can’t find a position? We're always looking for good talent! <a class="application-link" href="{{page.application-link}}" target="_blank">Get In Touch!</a></p>
 	</section>
 	<section class="careers-page__perks">
 		<h2 class="careers-page__perks__title">Perks & Benefits</h2>
