fix Twitter handle in [_authors/hbc-tech.html]

--- a/_authors/hbc-tech.html
+++ b/_authors/hbc-tech.html
@@ -11,6 +11,6 @@ social-media-profiles:
   url: https://github.com/hbc-tech
   handle: hbc-tech
 - platform: twitter
-  url: https://twitter.com/hbcdigital
-  handle: hbcdigital
+  url: https://twitter.com/hbctechteam
+  handle: hbctechteam
 ---
